@@ -16,8 +16,6 @@ sub import { #{{{
 		call => \&preprocess);
 	hook(type => "formbuilder", id => "edittemplate",
 		call => \&formbuilder);
-	hook(type => "refresh", id => "edittemplate",
-		call => \&refresh);
 } #}}}
 
 sub getsetup () { #{{{
@@ -139,9 +137,5 @@ sub filltemplate ($$) { #{{{
 
 	return $template->output;
 } #}}}
-
-sub refresh () {
-	
-}
 
 1
